--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -8,5 +8,6 @@
         <wb-resource deploy-path="/" source-path="/Replicator/rsrc"/>
         <wb-resource deploy-path="/" source-path="/Explorer/src"/>
         <wb-resource deploy-path="/" source-path="/Common/src"/>
+        <wb-resource deploy-path="/" source-path="/FlowTree/src"/>
     </wb-module>
 </project-modules>
