--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -10,5 +10,6 @@
         <wb-resource deploy-path="/" source-path="/FlowTree/src"/>
         <wb-resource deploy-path="/" source-path="/ThirdParty/src"/>
         <wb-resource deploy-path="/" source-path="/ThirdParty/iptables"/>
+        <wb-resource deploy-path="/" source-path="/TreeView/src"/>
     </wb-module>
 </project-modules>
