--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -11,5 +11,6 @@
         <wb-resource deploy-path="/" source-path="/ThirdParty/src"/>
         <wb-resource deploy-path="/" source-path="/ThirdParty/iptables"/>
         <wb-resource deploy-path="/" source-path="/TreeView/src"/>
+        <wb-resource deploy-path="/" source-path="/GraphPersist/src"/>
     </wb-module>
 </project-modules>
