--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -15,5 +15,6 @@
         <wb-resource deploy-path="/" source-path="/Metamerise/src"/>
         <wb-resource deploy-path="/" source-path="/GlitchFarm/src"/>
         <wb-resource deploy-path="/" source-path="/MatrixView/src"/>
+        <wb-resource deploy-path="/" source-path="/Swing/src"/>
     </wb-module>
 </project-modules>
