--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -16,5 +16,6 @@
         <wb-resource deploy-path="/" source-path="/Swing/src"/>
         <wb-resource deploy-path="/" source-path="/ForkedProjects/iptables"/>
         <wb-resource deploy-path="/" source-path="/ForkedProjects/src"/>
+        <wb-resource deploy-path="/" source-path="/RingsDesktop/src"/>
     </wb-module>
 </project-modules>
