--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -19,5 +19,6 @@
         <wb-resource deploy-path="/" source-path="/RingsDesktop/resources"/>
         <wb-resource deploy-path="/" source-path="/PromotionManager/src"/>
         <wb-resource deploy-path="/" source-path="/GraphPersist/test"/>
+        <wb-resource deploy-path="/" source-path="/ArtifactDetector/src"/>
     </wb-module>
 </project-modules>
