--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -20,5 +20,6 @@
         <wb-resource deploy-path="/" source-path="/PromotionManager/src"/>
         <wb-resource deploy-path="/" source-path="/GraphPersist/test"/>
         <wb-resource deploy-path="/" source-path="/ArtifactDetector/src"/>
+        <wb-resource deploy-path="/" source-path="/FlowTree/resources"/>
     </wb-module>
 </project-modules>
