--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -21,5 +21,6 @@
         <wb-resource deploy-path="/" source-path="/GraphPersist/test"/>
         <wb-resource deploy-path="/" source-path="/ArtifactDetector/src"/>
         <wb-resource deploy-path="/" source-path="/FlowTree/resources"/>
+        <wb-resource deploy-path="/" source-path="/Replicator/resources"/>
     </wb-module>
 </project-modules>
