--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -22,5 +22,6 @@
         <wb-resource deploy-path="/" source-path="/FlowTree/resources"/>
         <wb-resource deploy-path="/" source-path="/Replicator/resources"/>
         <wb-resource deploy-path="/" source-path="/FeedGrowth/resources"/>
+        <wb-resource deploy-path="/" source-path="/RingsDesktop/resources"/>
     </wb-module>
 </project-modules>
