--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -23,5 +23,6 @@
         <wb-resource deploy-path="/" source-path="/Replicator/resources"/>
         <wb-resource deploy-path="/" source-path="/FeedGrowth/resources"/>
         <wb-resource deploy-path="/" source-path="/RingsDesktop/resources"/>
+        <wb-resource deploy-path="/" source-path="/OptimalZoo/src"/>
     </wb-module>
 </project-modules>
