Corrected SurfaceCanvasTest and introduced DefaultReplicantTest.

--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -25,5 +25,6 @@
         <wb-resource deploy-path="/" source-path="/RingsDesktop/resources"/>
         <wb-resource deploy-path="/" source-path="/OptimalZoo/src"/>
         <wb-resource deploy-path="/" source-path="/Rings/test"/>
+        <wb-resource deploy-path="/" source-path="/Replicator/test"/>
     </wb-module>
 </project-modules>
