--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -26,5 +26,6 @@
         <wb-resource deploy-path="/" source-path="/OptimalZoo/src"/>
         <wb-resource deploy-path="/" source-path="/Rings/test"/>
         <wb-resource deploy-path="/" source-path="/Replicator/test"/>
+        <wb-resource deploy-path="/" source-path="/Birst/src"/>
     </wb-module>
 </project-modules>
