Migrated some code into the 'world' source folder

--- a/Common/.settings/org.eclipse.wst.common.component
+++ b/Common/.settings/org.eclipse.wst.common.component
@@ -2,5 +2,6 @@
     <wb-module deploy-name="Common">
         <wb-resource deploy-path="/" source-path="/src"/>
         <wb-resource deploy-path="/" source-path="/ui"/>
+        <wb-resource deploy-path="/" source-path="/world"/>
     </wb-module>
 </project-modules>
