--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -31,5 +31,6 @@
         <wb-resource deploy-path="/" source-path="/shading"/>
         <wb-resource deploy-path="/" source-path="/ui"/>
         <wb-resource deploy-path="/" source-path="/engine"/>
+        <wb-resource deploy-path="/" source-path="/test"/>
     </wb-module>
 </project-modules>
